@@ -37,9 +37,12 @@ namespace netlist {
     RangeArrayCommon(const std::list<boost::shared_ptr<Range> >& rhs) : child(rhs) {}
 
     // helpers
-    void op_and(const std::list<boost::shared_ptr<Range> >&); // get the shared range of two range arrays
-    void op_or(const std::list<boost::shared_ptr<Range> >&);  // get the combined range of two range arrays
-    bool op_equ(const std::list<boost::shared_ptr<Range> >&) const; // check whether two range arrays are equal
+    // get the shared range of two range arrays
+    std::list<boost::shared_ptr<Range> > op_and(const std::list<boost::shared_ptr<Range> >&) const;
+    // get the combined range of two range arrays
+    std::list<boost::shared_ptr<Range> > op_or(const std::list<boost::shared_ptr<Range> >&) const;  
+    // check whether two range arrays are equal
+    bool op_equ(const std::list<boost::shared_ptr<Range> >&) const; 
     
   protected:
     std::list<boost::shared_ptr<Range> > child; // the range expressions of the lower dimension
